--- a/platform-config/default/km/settings.json
+++ b/platform-config/default/km/settings.json
@@ -21,7 +21,7 @@
     },
     {
       "entityType": "faq",
-      "disabled": false
+      "disabled": true
     },
     {
       "entityType": "healthcareFacility",
@@ -56,19 +56,13 @@
       "disabled": true
     },
     {
-      "entityType": "ce_menu",
-      "defaultFieldEligibilityGroup": "ce_menu.default",
-      "disabled": false
-    },
-    {
       "entityType": "ce_site",
       "defaultFieldEligibilityGroup": "ce_site.default",
       "disabled": false
     },
     {
-      "entityType": "ce_menuItem",
-      "defaultFieldEligibilityGroup": "ce_menuItem.default",
-      "disabled": false
+      "entityType" : "ce_team",
+      "disabled": false,
     },
     {
       "entityType": "financialProfessional",
