--- a/config.yaml
+++ b/config.yaml
@@ -8,3 +8,10 @@ buildConfiguration:
       - .npmrc
 livePreviewConfiguration:
   setupCommand: ":"
+# Authentication can be setup here. First, follow the instructions to create
+# the authentication policy via the admin console and then specify the policy
+# name here.
+# authentication:
+#  policyName: test-auth0-policy
+#  includePaths:
+#    - /admin/*
