--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "pages build"
   },
   "engines": {
-    "node": "^18.0.0 || >=20.2.0"
+    "node": "^18.20.0 || >=20.2.0"
   },
   "dependencies": {
     "clsx": "^2.0.0",
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "@yext/pages": "^1.0.0",
+    "@yext/pages": "^1.1.0-beta.1",
     "@yext/pages-components": "^1.0.0-rc.1",
     "autoprefixer": "^10.4.16",
     "eslint-config-prettier": "^9.1.0",
