--- a/config.yaml
+++ b/config.yaml
@@ -11,5 +11,7 @@ livePreviewConfiguration:
 # Authentication can be setup here. First, follow the instructions to create
 # the authentication policy via the admin console and then specify the policy
 # name here.
-authentication:
- policyName: auth-policy
+# authentication:
+#  policyName: test-auth0-policy
+#  includePaths:
+#    - /admin/*
